# windows-inspect

./: Cargo.toml  README.md  build.rs  windows-inspect.exe.manifest
.github/workflows/: release.yml
src/: etw.rs  main.rs  net.rs  speed.rs  titlebar.rs
ui/: app.slint
