[package]
name = "windows-inspect"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrisetw = "1.2.0"
slint = "1.16"
sysinfo = "0.33"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
ico = "0.3"
image = "0.25"
slint-build = "1.16"
winres = "0.1"
